DOC-1827: inlineCSS.adoc Updated API call from .getContent(); to editor.plugins.inlinecss.getContent(); Commented out template material

--- a/modules/ROOT/partials/plugin-apis/inlinecss-apis.adoc
+++ b/modules/ROOT/partials/plugin-apis/inlinecss-apis.adoc
@@ -1,11 +1,11 @@
-A new API, `editor.getContent()` has been added to support the new `InlineCSS` plugin
+A new API, `editor.plugins.inlinecss.getContent();` has been added to support the new `InlineCSS` plugin
 
 The API does not require configuration from the user server side, as the API’s function is to return a `string` around the HTML content specific that has `InlineCSS` styling applied.
 
 The API will do the following
 
 * Fire the 'InlineCSS' event
-* Get the editor's content by calling `editor.getContent()`
+* Get the editor's content by calling `editor.plugins.inlinecss.getContent();`
 * Collect all of the stylesheets defined by the `content_css` option
 * Collect all styles specified in the `content_style` option
 * Combine `content_css` and `content_style` styles while making sure `content_style` has a higher precedent
@@ -17,9 +17,9 @@ The API will do the following
 [source,js]
 ----
 interface PluginAPI {
-	getContent: () = >”content”< {
+	getContent: () => Promise<{
 		html: string;
-	}
+	}>
 }
 ----
 
@@ -31,27 +31,28 @@ Result output after the `InlineCSS` content has been applied by the API
 	html: '<p style="color: red;">hello</p>'
 }
 ----
+// @bforte do we need the below?
 
-[cols="1,1,4",options="header"]
-|===
-|Name |Arguments |Description
-|api-1 |args-1 |description-1
-|api-2 |args-2 |description-2
-|api-3 |args-3 |description-3
-|===
+// [cols="1,1,4",options="header"]
+// |===
+// |Name |Arguments |Description
+// |api-1 |args-1 |description-1
+// |api-2 |args-2 |description-2
+// |api-3 |args-3 |description-3
+// |===
 
-.Examples
-[source,js]
-----
-// use-case-1
-tinymce.activeEditor.plugins.inlinecss.arg-1();
+// .Examples
+// [source,js]
+// ----
+// // use-case-1
+// tinymce.activeEditor.plugins.inlinecss.arg-1();
 
-// use-case-2
-tinymce.activeEditor.plugins.inlinecss.arg-2();
+// // use-case-2
+// tinymce.activeEditor.plugins.inlinecss.arg-2();
 
-// use-case-3
-tinymce.activeEditor.plugins.inlinecss.arg-3();
+// // use-case-3
+// tinymce.activeEditor.plugins.inlinecss.arg-3();
 
-// use-case-4
-tinymce.activeEditor.plugins.inlinecss.arg-4();
-----
+// // use-case-4
+// tinymce.activeEditor.plugins.inlinecss.arg-4();
+// ----
