DOC-1754_2: typography-cmds.adoc
Added description of the command’s action.

--- a/modules/ROOT/partials/commands/typography-cmds.adoc
+++ b/modules/ROOT/partials/commands/typography-cmds.adoc
@@ -1,7 +1,7 @@
 [cols="1,3",options="header"]
 |===
 |Command |Description
-|mceTypography |[ TO BE ADDED ].
+|mceTypography |Runs the currently active set of Advanced Typography rules.
 |===
 
 .Example
