--- a/modules/ROOT/partials/commands/typography-cmds.adoc
+++ b/modules/ROOT/partials/commands/typography-cmds.adoc
@@ -1,7 +1,7 @@
 [cols="1,3",options="header"]
 |===
 |Command |Description
-|mceTypography |Runs the currently active set of Advanced Typography rules.
+|mceTypography |Run the currently active Advanced Typography rules over either the entire content for the {productname} document or the specific text selection highlighted by the user.
 |===
 
 .Example
