DOC-1827: inlince-css.adoc & /partials/configuration/inline-css.adoc
Moved configuration options docs from /pages/inline-css.adoc to new /partial/configuration/inline-css.adoc

Re-enabled include:: pointing to (now extant) /partial file.

--- a/modules/ROOT/pages/inline-css.adoc
+++ b/modules/ROOT/pages/inline-css.adoc
@@ -71,42 +71,7 @@ The {pluginname} plugin does support
 
 The following configuration options affect the behavior of the {pluginname} plugin.
 
-// include::partial$configuration/inline-css.adoc[]
-
-// ‘The target group is developers, not end-users’: <https://ephocks.atlassian.net/browse/EPIC-31>
-// Consequently, I’ve assumed the Inline CSS plugin will not be invoked by:
-// * using a Toolbar button; nor by
-// * selecting from a menu.
-// @bforte review required.
-=== inline_selector_filter
-
-Determines whether it is valid for a given CSS selector to have its CSS properties inlined into the HTML content
-
-Default: All selectors are considered valid to have their CSS inlined
-
-Type: `String` `RegExp` or `Function`
-
-[source,js]
-----
-inlinecss_selector_filter: (selector: string): boolean => {
-	return selector.indexOf('myprefix') !== -1;
-}
-----
-
-=== inline_file_filter
-
-Determines whether it is valid for a given CSS stylesheet to have its CSS inspected and inlined into the HTML content
-
-Default: All CSS stylesheet are considered valid to have their CSS inspected and inlined
-
-Type: `String` `RegExp` or `Function`
-
-[source,js]
-----
-inlinecss_file_filter: (href: string): boolean => {
-	return selector.indexOf('mystyles') !== -1;
-}
-----
+include::partial$configuration/inline-css.adoc[]
 
 == Events
 
