--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -40,7 +40,7 @@ The **Advanced Typography** plugin, depending on its setting, can replace common
 
 For information on the **Advanced typography** plugin, see: xref:advanced-typography.adoc[Advanced typography].
 
-There are several known issues in **Advanced Typography** 1.0.0:
+There is one known issue in **Advanced Typography** 1.0.1:
 
 ==== Switching the Advanced Typography target language does not always work as expected
 
@@ -76,17 +76,6 @@ Following this action by, then, selecting _Spanish_ from the *Advanced Typograph
 ----
 
 As of this release the only workaround is to not change *Advanced Typography* target languages.
-
-==== The Advanced Typography plugin erroneously honors the current SpellChecker Pro language selection
-
-There is currently a conflict between the selected **SpellChecker Pro** language and the selected **Advanced Typography** language.
-
-When a **SpellChecker Pro** language is specified, **SpellChecker Pro** adds a `lang=<language-value>` attribute to the `<body>` tag and the **Advanced Typography** plugin erroneously honors this attribute when applying Typography rules.
-
-Consequently, if, for example, the **Advanced Typography** plugin is set to Danish but the **SpellChecker Pro** language is set to English, when **Advanced Typography** rules are applied, it is English-language rules that are applied to the text, not Danish language rules.
-
-As of this release, the only workaround is to either not specify a **SpellChecker Pro** language or to make certain the currently specified **SpellChecker Pro** language is the same as the desired **Advanced Typography** language.
-
 
 [[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
