DOC-1843: advcode.adoc & /partials/configuration/advcode.adoc
Added /partials/configuration/advcode.adoc

Put lightly edited version of Karl’s write-up into this file.

Added include:: from /pages/advcode.adoc to this /partial.

--- a/modules/ROOT/pages/advcode.adoc
+++ b/modules/ROOT/pages/advcode.adoc
@@ -34,6 +34,8 @@ tinymce.init({
 });
 ----
 
+include::partial$configuration/advcode.adoc[]
+
 include::partial$misc/advcode-shortcuts.adoc[]
 
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
