DOC-1843: advcode.adoc
capitalisation change: s/basic/Basic/.

--- a/modules/ROOT/pages/advcode.adoc
+++ b/modules/ROOT/pages/advcode.adoc
@@ -23,7 +23,7 @@ liveDemo::advcode[]
 
 include::partial$misc/purchase-premium-plugins.adoc[]
 
-== Example: basic setup
+== Example: Basic setup
 
 [source,js]
 ----
