DOC-1777: 6.3-release-notes.adoc
Completed an incomplete sentence.

--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -147,7 +147,7 @@ In {productname} 6.3, the Advanced Code Editor plugin includes a new option, `ad
 
 Using advcode inside TinyMCE means users on mobile devices or with otherwise narrow screens do not require a ToggleView button, as advcode forces the editor to open within the existing editor space in inline mode.
 
-The basic setup for is as follows.
+The basic setup for this new option as follows.
 
 [source,js]
 ----
