--- a/modules/ROOT/pages/inline-css.adoc
+++ b/modules/ROOT/pages/inline-css.adoc
@@ -46,6 +46,51 @@ The {pluginname} plugin does support
 
 . @import with no @-rules.
 
+=== Iframe mode is fully supported with some notable limitations
+
+Since iframe is a sandbox, specifying CSS is reasonably constrained at this stage. 
+
+CSS styling information can be specified in several places for iframe mode:
+
+* A CSS stylesheet that is specified in the `<head>` of the iframe document i.e. `<link rel="stylesheet" href="styles.css">`
+** The supported way to add a stylesheet in {productname} is using the `content_css` option which automatically creates the `<link>` tag and puts it in the `<head>` of the document.
+** The user can also manually insert a stylesheet link in the <head> of the `iframe`.
+* A `<style>` tag in the `<head>` of the `iframe` document i.e. `<style>p { color: red; }</style>`
+** The supported way to add a style tag in {productname}, is using the `content_style` option which automatically creates the `<style>` tag and puts in the head of the document
+** The user can manually insert a style tag in the <head> of the `iframe`.
+* A `style` attribute on an element within the content i.e. inline CSS
+
+It is worth noting that by default, {productname} does not support having a `<style>` tags as part of the body HTML content.
+
+=== Inline mode is supported with some notable limitations
+
+As `inline` mode for {productname} editor is not sandboxed and as a result, any CSS specified on the main page can have an effect on how the editor content looks. 
+
+CSS styling information can be specified in several places for inline mode:
+
+* A CSS stylesheet that is specified in the `<head>` of the page i.e. `<link rel="stylesheet" href="styles.css">`
+** Adding a stylesheet in {productname}, can be done by using the `content_css` option which automatically creates the `<link>` tag in the <head> of the page.
+*** It is recommended to not use the `content_css` option though and just **manually** include the stylesheets.
+*** The user can also manually insert a stylesheet link in the <head> of the page.
+* A CSS stylesheet that is specified in the `<body>` of the page i.e. `<link rel="stylesheet" href="styles.css">`
+** This is not recommended by https://developer.mozilla.org/en-US/docs/Web/HTML/Element/link[MDN], but some browsers do allow it
+* A `<style>` in the `<head>` of the page i.e. `<style>p { color: red; }</style>`
+** To add a `<style>` in {productname} is by using the `content_style` option which automatically creates the `<style>` tag in the <head> of the document
+** The user can also manually put a `<style>` tag in the <head> of the page.
+* A `<style>` in the `<body>` of the page
+** As noted in the `Classic iframe` section, this should not be done, but some browsers will still allow it.
+* A `style` attribute on an {productname} element within the content i.e. inline CSS
+
+=== Shadow DOM is supported but **not** officially, with some notable limitations
+
+Shadow DOM is **not** officially supported by {productname}, but the feature will work when an editor running in `inline` or `iframe` is contained within a shadow root. 
+
+When an `iframe` mode editor is contained with a shadow root, the editor content can be styled the same way, where the expected behavior for the `feature` is that it should not have to consider if the editor is in a shadow root. When an `inline` editor is contained within a shadow root, the stylesheet (`<link>` tags) and `<style>` tags are added directly as children of the shadow root and do not need to be contained within a `<head>` tag. 
+
+When in `inline mode`, the feature checks if the editor is inside a shadow root to ensure it does not try to get `<styles>` that are outside the shadow root.
+
+When an editor is in a shadow root, the feature should still support getting the stylesheets specified via the `content_css` option as well as the CSS styles specified via  the`content_style` option.
+
 // * some pseudo-class selectors. See the specification for more details
 // (https://notion.so/tinycloud/Technical-specification-7c16d4522d1241ba9e7364880eab3e51#94b1d13ff444492bbfce789f7876f39c)
 // 
