DOC-1777: 6.3-release-notes.adoc
Edited sentence in Advanced Typography known issues sub-section to make the ‘workaround’ (such as it is) clearer.

--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -75,7 +75,7 @@ Following this action by, then, selecting _Spanish_ from the *Advanced Typograph
 «They went that way, ” he said, pointing.
 ----
 
-As of this release the only workaround is to not change *Advanced Typography* target languages.
+As of this release the only workaround is to not change *Advanced Typography* target languages after running any given target language’s rules over a {productname} document.
 
 [[accompanying-premium-plugin-changes]]
 == Accompanying Premium Plugin changes
