--- a/modules/ROOT/pages/inline-css.adoc
+++ b/modules/ROOT/pages/inline-css.adoc
@@ -44,7 +44,7 @@ The {pluginname} plugin does not support
 
 The {pluginname} plugin does support
 
-. @import with no @-rules.
+. @import with no At-rules.
 
 === Iframe mode is fully supported with some notable limitations
 
