--- a/modules/ROOT/partials/events/inlinecss-events.adoc
+++ b/modules/ROOT/partials/events/inlinecss-events.adoc
@@ -3,6 +3,5 @@ The following events are provided by the xref:inlince-css.adoc[Inline CSS plugin
 [cols="1,1,2",options="header"]
 |===
 |Name |Data |Description
-|event-1 |datatype-1 |Fired when <event-that-fires-event-1>.
-|event-2 |datatype-2 |Fired when <event-that-fires-event-2>.
+|InlineCSS |datatype-1 |Fired when inlining the CSS begins.
 |===
