--- a/modules/ROOT/partials/events/inlinecss-events.adoc
+++ b/modules/ROOT/partials/events/inlinecss-events.adoc
@@ -3,5 +3,5 @@ The following events are provided by the xref:inlince-css.adoc[Inline CSS plugin
 [cols="1,1,2",options="header"]
 |===
 |Name |Data |Description
-|InlineCSS |datatype-1 |Fired when inlining the CSS begins.
+|InlineCSS |N/A |Fired when inlining the CSS begins.
 |===
