--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -112,7 +112,7 @@ With this update, **Accessibility Checker** shows a level-specific icon with eac
 
 Many **Accessibility Checker** dialogs include a question mark icon. This icon is a link to further information about the discovered issue.
 
-This update includes changes to the presentation of this icon to make discoverability as a clickable button` more apparent.
+This update includes changes to the presentation of this icon to make discoverability as a clickable button more apparent.
 
 ==== The legibility of warning dialogs was improved
 
