--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -143,7 +143,7 @@ The {productname} 6.3 release includes an accompanying release of the **Advanced
 
 ==== new option to display the Advanced Code Editor inline instead of in a dialog
 
-In {productname} 6.3, the Advanced Code Editor plugin includes a new option, `advcode_inline`, that allows users to open the Advanced Code Editor within TinyMCE’s existing editor space instead of been displayed in a seperate dialog box.
+In {productname} 6.3, the Advanced Code Editor plugin includes a new option, `advcode_inline`, that allows users to open the Advanced Code Editor within TinyMCE’s existing editor space instead of being displayed in a separate dialog box.
 
 Using advcode inside TinyMCE means users on mobile devices or with otherwise narrow screens do not require a ToggleView button, as advcode forces the editor to open within the existing editor space in inline mode.
 
