--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -122,7 +122,7 @@ In concert with the changes noted above to the question mark icon in **Accessibi
 
 The icon’s text was centered and the *Issue*, *Warning*, or *Error* sub-heading’s font size was reduced.
 
-Additionally borders were removed from the exterior of the description field and contrast colors were adjusted to match the background color of the icons added for this release.
+Additionally, borders were removed from the exterior of the description field and contrast colors were adjusted to match the background color of the icons added for this release.
 
 ==== Added correct icons in dialog alert panel for each severity level
 
