DOC-1777: 6.3-release-notes.adoc
Copy edit and sentence removal.

--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -143,11 +143,9 @@ The {productname} 6.3 release includes an accompanying release of the **Advanced
 **Advanced Code Editor** 3.1.0 includes the following improvement.
 
 
-==== new option to display the Advanced Code Editor inline instead of in a dialog
+==== New option to display the Advanced Code Editor inline instead of in a dialog
 
 In {productname} 6.3, the Advanced Code Editor plugin includes a new option, `advcode_inline`, that allows users to open the Advanced Code Editor within TinyMCE’s existing editor space instead of being displayed in a separate dialog box.
-
-Using advcode inside TinyMCE means users on mobile devices or with otherwise narrow screens do not require a ToggleView button, as advcode forces the editor to open within the existing editor space in inline mode.
 
 The basic setup for this new option as follows.
 
