--- a/modules/ROOT/partials/configuration/advanced-typography.adoc
+++ b/modules/ROOT/partials/configuration/advanced-typography.adoc
@@ -201,7 +201,7 @@ tinymce.init({
   selector: 'textarea',  // change this value according to your html
   plugins: '{plugincode}',
   toolbar: '{plugincode}',
-  language: 'en_US', // This is required to configure the default language used by typography.
+  typography_default_lang: 'en_US', // This is required to configure the default language used by typography.
   typography_rules: [
     'common/punctuation/quote',
     'en-US/dash/main',
