DOC_1754_2: typography-menu-items.adoc & typography-toolbar-buttons.adoc
Added to Description cell in both files noting that selecting a language both switches to that language’s rule-set *and* runs that language’s rule-set over the document or current selection.

--- a/modules/ROOT/partials/toolbar-button-ids/typography-toolbar-buttons.adoc
+++ b/modules/ROOT/partials/toolbar-button-ids/typography-toolbar-buttons.adoc
@@ -1,7 +1,7 @@
 [cols="1,3",options="header"]
 |===
 |Toolbar button identifier |Description
-|`+typopgraphy+` | Runs the currently active set of Advanced Typography rules over the document or the current selection. Also contains a menu of available language-specific rule sets. When the menu reveal, rather than the icon proper, is pressed, this menu is displayed and a new language-specific rule set can be selected.
+|`+typopgraphy+` | Runs the currently active set of Advanced Typography rules over the document or the current selection. Also contains a menu of available language-specific rule sets. When the menu reveal, rather than the icon proper, is pressed, this menu is displayed and a new language-specific rule set can be selected. Note that selecting a language from the menu both switches to that language’s rule set and runs that language’s rule set over the document or the current selection.
 |===
 
 
