--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -234,7 +234,7 @@ In this example, typing `{{string}}` followed by a word boundary character (such
 
 ==== Merge tags cannot exceed 255 characters in length
 
-In {productname} 6.3 a new character limit range of 0-255 was introduced.
+In {productname} 6.3 a new character limit was introduced: merge tags cannot, now, exceed 255 characters.
 
 With this change, all merge tags are now subject to this limit including those predefined in the `mergetags_list` option.
 
